[bug 864492] Make helpfulness survey more visible

--- a/media/less/wiki.less
+++ b/media/less/wiki.less
@@ -1009,9 +1009,13 @@ div.video .kbox-container {
 
 /* document vote form */
 .vote-wrap {
-  display: inline-block;
+  background: #eef2f5;
+  border: 1px solid #e4ebee;
+  margin: 20px 0;
+  padding: 0 30px 6px 30px;
   position: relative;
 }
+
 .document-vote {
   display: inline-block;
   vertical-align: top;
